--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pseudo Classes and Pseudo elements.</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Box Model</h1>
+    <!-- Pseudo classes : define special state of an element.
+         make webpage dynamic eg.(a:hover) 
+    -->
+    <!-- Pseudo elements : define style for specific part of an element.
+         eg. (h1::after)
+    -->
+
+    <!-- <a href="https://www.google.com">Click Here</a> -->
+
+    <div class="dropdown">
+        <a href="#">Items</a>
+        <div class="dropdown-content">
+            <a href="#">item 1</a>
+            <a href="#">item 2</a>
+            <a href="#">item 3</a>
+        </div>
+    </div>
 </body>
 </html>
