Pseudo Classes completed.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
 
     <!-- <a href="https://www.google.com">Click Here</a> -->
 
-    <div class="dropdown">
+    <!-- <div class="dropdown">
         <a href="#">Items</a>
         <div class="dropdown-content">
             <a href="#">item 1</a>
             <a href="#">item 2</a>
             <a href="#">item 3</a>
         </div>
-    </div>
+    </div> -->
+
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+        <li>item 5</li>
+    </ul>
 </body>
 </html>
