--- a/index.html
+++ b/index.html
@@ -8,30 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Pseudo classes : define special state of an element.
-         make webpage dynamic eg.(a:hover) 
-    -->
+ 
     <!-- Pseudo elements : define style for specific part of an element.
          eg. (h1::after)
     -->
 
-    <!-- <a href="https://www.google.com">Click Here</a> -->
+    <h1>Heading</h1>
 
-    <!-- <div class="dropdown">
-        <a href="#">Items</a>
-        <div class="dropdown-content">
-            <a href="#">item 1</a>
-            <a href="#">item 2</a>
-            <a href="#">item 3</a>
-        </div>
-    </div> -->
-
-    <ul>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-        <li>item 4</li>
-        <li>item 5</li>
-    </ul>
 </body>
 </html>
