--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
-    <!-- Pseudo elements : define style for specific part of an element.
-         eg. (h1::after)
-    -->
-
+    <div>
+        Measurments unit part 1 
+    </div>
     <h1>Heading</h1>
 
+    <div>
+        <p>Paragraph</p>
+    </div>
+    <div>
+        Measurments unit part 2 
+    </div>
+    <section>
+        <h1>Heading</h1>
+        <div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum animi quo corporis reiciendis explicabo rerum odio distinctio excepturi adipisci? Eum rem delectus architecto corporis suscipit hic iure ipsum temporibus esse.</p>
+        </div>
+    </section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolore, aperiam harum asperiores rem illo? Maxime in sequi quod animi culpa? Itaque, nesciunt tempora porro doloribus deserunt et consectetur maxime rerum dolorem mollitia voluptatem quod, soluta neque dolores, obcaecati animi! Nemo quam qui pariatur nam sint dolores quisquam ea perferendis incidunt, eveniet fuga voluptatum architecto mollitia aperiam repudiandae! Minus quasi ex eius cum eos minima nesciunt debitis reprehenderit maiores doloremque, possimus ipsam itaque quisquam sapiente alias non veritatis dolores autem magnam perferendis quos. Adipisci aut odit perferendis, nulla, non accusantium doloribus aperiam nam error cum tempora sint dolores officiis id provident, deserunt voluptates dolorem suscipit harum quibusdam quasi vel tenetur totam. Rem ducimus laudantium molestias, ex molestiae iusto sapiente cum maiores! Voluptatem non, saepe voluptatibus inventore at odit sit vel sequi suscipit itaque beatae consequatur possimus veritatis unde nemo eaque molestiae alias magni ducimus veniam perferendis similique doloremque dolores nostrum. Iste vero nobis molestiae temporibus aut, quia corrupti eos suscipit. Quis libero inventore et! Aspernatur eaque nesciunt ut molestias optio reprehenderit impedit necessitatibus numquam voluptatibus ea nam dignissimos beatae perferendis pariatur, ipsum nihil dicta dolorem repudiandae amet quidem doloremque! Et assumenda minus aperiam, dolorum animi nobis quisquam veritatis ullam a labore quia ut esse, maiores sequi magni repudiandae at ipsum doloribus id quis. Tempore facilis commodi voluptatem debitis ipsum magni qui suscipit quos blanditiis sapiente earum eligendi iste labore, numquam amet sint fugiat atque modi eaque! Ducimus, mollitia at? Vel, voluptatum impedit sequi a totam veritatis error ut blanditiis quae!</p>
 </body>
 </html>
