New update from my laptop

--- a/shadows.html
+++ b/shadows.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
 
-        .heading { 
+        .heading {
             font-family: "Trebuchet MS", sans-serif;
             font-size: 55px;
             text-align: center;
@@ -17,6 +17,15 @@
 
         .card {
             width: 400px;
+            margin: 100px auto;
+            background-color: #ccc;
+            padding: 5px;
+            text-align: center;
+            box-shadow: 5px 5px 10px #777;
+        }
+
+        .card:hover {
+            box-shadow: 10px 10px 20px #aaa;
         }
 
         .card img {
